main/blog/current-affair search field

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,31 +19,23 @@
                         <!-- Row With Forms -->
                         <div class="row with-forms">
 
-                            <!-- Property Type -->
-                            <div class="col-md-3">
-                                <select data-placeholder="Any Type" class="chosen-select-no-single" >
-                                    <option>Apartments</option>
-                                    <option>Houses</option>
-                                    <option>Commercial</option>
-                                    <option>Garages</option>
-                                    <option>Lots</option>
-                                </select>
-                            </div>
+                            <form action="{% url 'core:libraries' %}">
 
-                            <!-- Status -->
-                            <div class="col-md-3">
-                                <select data-placeholder="Any Status" class="chosen-select-no-single" >
-                                    <option>For Sale</option>
-                                    <option>For Rent</option>
-                                </select>
+                             <div class="col-md-4">
+
+                                    <div class="main-search-input">
+                                        <input type="search" placeholder="Enter city" aria-label="City" name='city' value="{{ city }}" />
+                                    </div>
                             </div>
 
                             <!-- Main Search Input -->
-                            <div class="col-md-6">
-                                <div class="main-search-input">
-                                    <input type="text" placeholder="Enter address e.g. street, city or state" value=""/>
-                                    <button class="button"><i class="fa fa-search"></i></button>
-                                </div>
+                            <div class="col-md-8">
+
+                                    <div class="main-search-input">
+                                        <input type="search" placeholder="Search Using a Key Word" aria-label="Search" name='search' value="{{search_term}}"  />
+                                        <button type = "submit" class="button"><i class="fa fa-search"></i></button>
+                                    </div>
+                                </form>
                             </div>
 
                         </div>
@@ -51,12 +43,12 @@
 
                         <!-- Browse Jobs -->
                         <div class="adv-search-btn">
-                            Need more search options? <a href="listings-list-full-width.html">Advanced Search</a>
+                            Need more search options? <a href="{% url 'core:libraries' %}">Advanced Search</a>
                         </div>
 
                         <!-- Announce -->
                         <div class="announce">
-                            We’ve 1000 properties for you!
+                            We’ve 1000 Libraries for you!
                         </div>
 
                     </div>
