--- a/blog/templates/bloghome.html
+++ b/blog/templates/bloghome.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2>Current Affairs</h2>
+				<h2>Blog</h2>
 				<span>Keep up to date with the latest news</span>
 
 			</div>
