--- a/blog/templates/blogpost.html
+++ b/blog/templates/blogpost.html
@@ -13,7 +13,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2>Current Affairs</h2>
+				<h2>Blog</h2>
 				<span>Keep up to date with the latest news</span>
 
 			</div>
@@ -66,19 +66,6 @@
 				</div>
 			</div>
 			<!-- Blog Post / End -->
-
-
-			<!-- Post Navigation -->
-			<ul id="posts-nav" class="margin-top-0 margin-bottom-40">
-				<li class="next-post">
-					<a href="#"><span>Next Post</span>
-					Tips For Newbie Hitchhiker</a>
-				</li>
-				<li class="prev-post">
-					<a href="#"><span>Previous Post</span>
-					What's So Great About Merry?</a>
-				</li>
-			</ul>
 
 			<div class="margin-top-50"></div>
 
