faq, testimonials, bug-reports

--- a/blog/templates/blogpost.html
+++ b/blog/templates/blogpost.html
@@ -170,14 +170,15 @@
 
 			<!-- Widget -->
 			<div class="widget">
+                <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
 				<h3 class="margin-top-0 margin-bottom-25">Social</h3>
 				<ul class="social-icons rounded">
-					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-					<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-					<li><a class="linkedin" href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a class="a2a_button_facebook"></a></li>
+					<li><a class="a2a_button_twitter"></a></li>
+					<li><a class="a2a_button_email"></a></li>
+					<li><a class="a2a_button_linkedin"></a></li>
 				</ul>
-
+                </div>
 			</div>
 			<!-- Widget / End-->
 
@@ -197,5 +198,7 @@
 
 
 <div id="mm-blocker" class="mm-slideout">
+
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
   {% endblock content %}
 
