--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,8 +18,12 @@
 					<li><a href="{% url 'account_login' %}">Login</a></li>
 					<li><a href="{% url 'account_signup' %}">Sign Up</a></li>
 					<li><a href="{% url 'core:userprofile' %}">My Account</a></li>
-					<li><a href="{% url 'core:addlibrary' %}">Add Property</a></li>
+					<li><a href="{% url 'core:addlibrary' %}">Add Library</a></li>
 					<li><a href="{% url 'core:bookmarks' %}">Bookmarks</a></li>
+                    <li><a href="{% url 'core:userprofile' %}">Privacy Policy</a></li>
+					<li><a href="{% url 'core:addlibrary' %}">FAQ</a></li>
+                    <li><a href="{% url 'core:userprofile' %}">Terms and Conditions</a></li>
+					<li><a href="{% url 'core:reportbug' %}">Report a Bug</a></li>
                     <li><a href="{% url 'core:contact' %}">Contact</a></li>
 				</ul>
 
