--- a/templates/faq.html
+++ b/templates/faq.html
@@ -30,16 +30,20 @@
 	<div class="row">
 
 		<div class="col-md-10">
-{#			<h4 class="headline margin-top-0 margin-bottom-20">Toggles</h4>#}
+{#			<h4 class="headline margin-top-0 margin-bottom-20">FAQs</h4>#}
 
 			<!-- Toggles Container -->
 			<div class="style-2">
-                {% for question in faqs %}
+                {% for faq in faqs %}
 				<!-- Toggle 1 -->
 				<div class="toggle-wrap">
-					<span class="trigger "><a href="#">{{ forloop.counter }}. {{ question.question }}<i class="sl sl-icon-plus"></i></a></span>
+					<span class="trigger "><a href="#">{{ forloop.counter }}. {{ faq.question }}<i class="sl sl-icon-plus"></i></a></span>
 					<div class="toggle-container" style="display: none;">
-						<p>{{ question.answer }}</p>
+						<p>
+							{{ faq.get_short_content }}
+							{% if faq.if_short_content %} <a href="{% url 'core:faqdetail" faq.id %}> Read More ... </a>{% endif %}
+
+						</p>
 					</div>
 				</div>
                 {% endfor %}
