--- a/templates/index.html
+++ b/templates/index.html
@@ -365,7 +365,7 @@
             <div class="col-md-4">
 
                 <!-- Image Box -->
-                <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="images/popular-location-01.jpg">
+                <a href="{% url 'core:libraries' %}?city=gurgaon" class="img-box" data-background-image="images/popular-location-01.jpg">
 
                     <!-- Badge -->
                     <div class="listing-badges">
@@ -383,7 +383,7 @@
             <div class="col-md-8">
 
                 <!-- Image Box -->
-                <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="images/popular-location-02.jpg">
+                <a href="{% url 'core:libraries' %}?city=noida" class="img-box" data-background-image="images/popular-location-02.jpg">
                     <div class="img-box-content visible">
                         <h4>Noida</h4>
                         <span>24 Libraries</span>
@@ -395,7 +395,7 @@
             <div class="col-md-8">
 
                 <!-- Image Box -->
-                <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="images/popular-location-03.jpg">
+                <a href="{% url 'core:libraries' %}?city=mumbai" class="img-box" data-background-image="images/popular-location-03.jpg">
                     <div class="img-box-content visible">
                         <h4>Mumbai</h4>
                         <span>12 Libraries</span>
@@ -407,7 +407,7 @@
             <div class="col-md-4">
 
                 <!-- Image Box -->
-                <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="images/popular-location-04.jpg">
+                <a href="{% url 'core:libraries' %}?city=delhi" class="img-box" data-background-image="images/popular-location-04.jpg">
                     <div class="img-box-content visible">
                         <h4>Delhi</h4>
                         <span>9 Libraries</span>
