--- a/templates/faqdetail.html
+++ b/templates/faqdetail.html
@@ -22,7 +22,7 @@
 
 <!-- Content
 ================================================== -->
-<div class="container">
+<div class="container" style="margin-bottom: 50px">
 	<!-- Inline Elements
 	================================================== -->
 	<div class="row">
@@ -31,10 +31,7 @@
 		<h4 class="headline with-border margin-top-45 margin-bottom-25" style="text-align: center"> {{faq.question}} </h4>
 
             <p>
-                {{faq.answer|escape|linebreaks }} 
-
-
-
+                {{faq.answer|escape|linebreaks }}
             </p>
 		</div>
 	</div>
