--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                             <i class="im im-icon-Checked-User"></i>
                         </div>
 
-                        <h3>Agent Finder</h3>
+                        <h3>Library Finder</h3>
                         <p>See who specializes in your area, has the most reviews and the right experience to meet your needs.</p>
                     </div>
                 </div>
@@ -134,8 +134,8 @@
                             <div class="counter-box">
                                 <div class="counter-box-icon">
                                     <i class="im im-icon-Home-2"></i>
-                                    <span class="counter">942</span>
-                                    <p>Listings For Sale</p>
+                                    <span class="counter">1942</span>
+                                    <p>Libraries</p>
                                 </div>
                             </div>
                         </div>
@@ -144,8 +144,8 @@
                             <div class="counter-box">
                                 <div class="counter-box-icon">
                                     <i class="im im-icon-Money-2"></i>
-                                    <span class="counter">1476</span>
-                                    <p>Listings For Rent</p>
+                                    <span class="counter">500</span>
+                                    <p>Cities</p>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 <div class="counter-box-icon">
                                     <i class="im im-icon-Business-ManWoman"></i>
                                     <span class="counter">389</span>
-                                    <p>Agents</p>
+                                    <p>Library Owners</p>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                 <div class="counter-box-icon">
                                     <i class="im im-icon-Suitcase"></i>
                                     <span class="counter">163</span>
-                                    <p>Brokers</p>
+                                    <p>Average Seats per Library</p>
                                 </div>
                             </div>
                         </div>
@@ -179,10 +179,10 @@
         <!-- Counters / End -->
 
         <!-- Flip banner -->
-        <a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
+        <a href="{% url 'core:libraries' %}" class="flip-banner parallax" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
             <div class="flip-banner-content">
-                <h2 class="flip-visible">We help people and homes find each other</h2>
-                <h2 class="flip-hidden">Browse Properties <i class="sl sl-icon-arrow-right"></i></h2>
+                <h2 class="flip-visible">We help students find libraries</h2>
+                <h2 class="flip-hidden">Browse Libraries <i class="sl sl-icon-arrow-right"></i></h2>
             </div>
         </a>
         <!-- Flip banner / End -->
@@ -259,13 +259,12 @@
                         <div class="icon-container">
                             <i class="im im-icon-Office"></i>
                             <div class="icon-links">
-                                <a href="listings-grid-standard-with-sidebar.html">For Sale</a>
-                                <a href="listings-grid-standard-with-sidebar.html">For Rent</a>
+                                <a href="listings-grid-standard-with-sidebar.html">To Join</a>
                             </div>
                         </div>
 
-                        <h3>Apartments</h3>
-                        <p>Aliquam dictum elit vitae mauris facilisis, at dictum urna dignissim donec vel lectus vel felis.</p>
+                        <h3>Libraries</h3>
+                        <p>We help students find libraries nearby to make their studies smooth and confortable</p>
                     </div>
                 </div>
 
@@ -276,12 +275,12 @@
                         <div class="icon-container">
                             <i class="im im-icon-Home-2"></i>
                             <div class="icon-links">
-                                <a href="listings-grid-standard-with-sidebar.html">For Sale</a>
-                                <a href="listings-grid-standard-with-sidebar.html">For Rent</a>
+                                <a href="listings-grid-standard-with-sidebar.html">To Join</a>
+                                
                             </div>
                         </div>
 
-                        <h3>Houses</h3>
+                        <h3>Books</h3>
                         <p>Aliquam dictum elit vitae mauris facilisis, at dictum urna dignissim donec vel lectus vel felis.</p>
                     </div>
                 </div>
@@ -293,12 +292,12 @@
                         <div class="icon-container">
                             <i class="im im-icon-Car-3"></i>
                             <div class="icon-links">
-                                <a href="listings-grid-standard-with-sidebar.html">For Sale</a>
-                                <a href="listings-grid-standard-with-sidebar.html">For Rent</a>
+                                <a href="listings-grid-standard-with-sidebar.html">To View</a>
+                               
                             </div>
                         </div>
 
-                        <h3>Garages</h3>
+                        <h3>Newspaper Clippings</h3>
                         <p>Aliquam dictum elit vitae mauris facilisis, at dictum urna dignissim donec vel lectus vel felis.</p>
                     </div>
                 </div>
@@ -310,12 +309,12 @@
                         <div class="icon-container">
                             <i class="im im-icon-Clothing-Store"></i>
                             <div class="icon-links">
-                                <a href="listings-grid-standard-with-sidebar.html">For Sale</a>
-                                <a href="listings-grid-standard-with-sidebar.html">For Rent</a>
+                                <a href="listings-grid-standard-with-sidebar.html">Popular</a>
+                                
                             </div>
                         </div>
 
-                        <h3>Commercial</h3>
+                        <h3>Magazines</h3>
                         <p>Aliquam dictum elit vitae mauris facilisis, at dictum urna dignissim donec vel lectus vel felis.</p>
                     </div>
                 </div>
@@ -339,8 +338,8 @@
 
                 <div class="row">
                     <div class="col-lg-6 col-sm-8">
-                        <h2>It's your journey. We're here to help.</h2>
-                        <p>We’re full-service, local agents who know how to find people and home each together. We use online tools with an unmatched search capability to make you smarter and faster.</p>
+                        <h2>It's your journey to a better future. We're here to help you.</h2>
+                        <p>We’re full-service, agents who know how to find appropriate libraries for you. We use online tools with an unmatched search capability to make you smarter and faster.</p>
                         <a href="listings-list-with-sidebar.html" class="button margin-top-25">Get Started</a>
                     </div>
                 </div>
@@ -359,7 +358,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="headline centered margin-bottom-35 margin-top-10">Most Popular Places <span>Properties In Most Popular Places</span></h3>
+                <h3 class="headline centered margin-bottom-35 margin-top-10">Most Popular Libraries<span>Seating in most popular libraries</span></h3>
             </div>
 
             <div class="col-md-4">
@@ -373,8 +372,8 @@
                     </div>
 
                     <div class="img-box-content visible">
-                        <h4>Gurgaon</h4>
-                        <span>14 Libraries</span>
+                        <h4>National Library of India</h4>
+                        <span>_ Seats</span>
                     </div>
                 </a>
 
@@ -385,8 +384,8 @@
                 <!-- Image Box -->
                 <a href="{% url 'core:libraries' %}?city=noida" class="img-box" data-background-image="images/popular-location-02.jpg">
                     <div class="img-box-content visible">
-                        <h4>Noida</h4>
-                        <span>24 Libraries</span>
+                        <h4>Delhi Public Library</h4>
+                        <span>_ Seats</span>
                     </div>
                 </a>
 
@@ -397,8 +396,8 @@
                 <!-- Image Box -->
                 <a href="{% url 'core:libraries' %}?city=mumbai" class="img-box" data-background-image="images/popular-location-03.jpg">
                     <div class="img-box-content visible">
-                        <h4>Mumbai</h4>
-                        <span>12 Libraries</span>
+                        <h4>Saraswati Mahal Library</h4>
+                        <span>_ Seats</span>
                     </div>
                 </a>
 
@@ -409,8 +408,8 @@
                 <!-- Image Box -->
                 <a href="{% url 'core:libraries' %}?city=delhi" class="img-box" data-background-image="images/popular-location-04.jpg">
                     <div class="img-box-content visible">
-                        <h4>Delhi</h4>
-                        <span>9 Libraries</span>
+                        <h4>Anna Centenary Library</h4>
+                        <span>_ Seats</span>
                     </div>
                 </a>
 
@@ -464,7 +463,7 @@
     <!-- Flip banner -->
     <a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-background="images/flip-banner-bg.jpg" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
         <div class="flip-banner-content">
-            <h2 class="flip-visible">Subscribe to Our Newsletter</h2>
+            <h2 class="flip-visible">INPUT BOX</h2>
             <h2 class="flip-hidden">Browse Properties <i class="sl sl-icon-arrow-right"></i></h2>
         </div>
     </a>
