fixed testimonials dp

--- a/exams/templates/currentaffairs.html
+++ b/exams/templates/currentaffairs.html
@@ -47,7 +47,7 @@
                                     <span class="listing-compact-title">{{ currentaffair.title }}</span>
 
                                     <ul class="listing-hidden-content">
-
+                                        <h3 style="text-align: center; color: white">Download</h3>
                                     </ul>
                                 </div>
 
