--- a/templates/index.html
+++ b/templates/index.html
@@ -487,7 +487,7 @@
                     <div class="testimonial-box">
                         <div class="testimonial">{{ testimonial.description }}</div>
                         <div class="testimonial-author">
-                            <img src="images/happy-client-01.jpg" alt="">
+                            <img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="">
                             <h4>{{ testimonial.name }}</h4>
                         </div>
                     </div>
