--- a/templates/library.html
+++ b/templates/library.html
@@ -216,8 +216,8 @@
 						<div class="agent-title">
 							<div class="agent-photo"><img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt=""></div>
 							<div class="agent-details">
-								<h4><a href="#">Jennie Wilson</a></h4>
-								<span><i class="sl sl-icon-call-in"></i>(123) 123-456</span>
+								<h4><a href="#">{{ library.owner_fname }} {{ library.owner_lname }}</a></h4>
+								<span><i class="sl sl-icon-call-in"></i>{{ library.mobile_no }}</span>
 							</div>
 							<div class="clearfix"></div>
 						</div>
