rectified newsletter subscribe and added contact info

--- a/templates/index.html
+++ b/templates/index.html
@@ -465,9 +465,9 @@
         <div class="flip-banner-content">
             <h2 class="flip-visible">Subscribe to our Newsletter</h2>
             <h2 class="flip-hidden">
-                <div class="col-md-8">
-                    <div class="main-search-input">
-                        <input type="search" placeholder="Search Using a Key Word" aria-label="Search" name='search' value="{{search_term}}"  />
+                <div class="col-md-8" style="align-items: center">
+                    <div class="main-search-input" style="margin-left: 240px">
+                        <input type="email" placeholder="Enter your email" aria-label="Email" name='Email' value="{{search_term}}"  />
                         <button type = "submit" class="button">Submit</button>
                     </div>
                 </div>
