--- a/templates/reportbug.html
+++ b/templates/reportbug.html
@@ -16,12 +16,19 @@
 
 			<!-- Contact Details -->
 			<div class="sidebar-textbox">
-				<p>Collaboratively administrate turnkey channels whereas virtual e-tailers. Objectively seize scalable metrics whereas proactive e-services.</p>
+				<p>Power2create Grievance Officer shall undertake all reasonable efforts to address your grievances at the earliest possible opportunity. You may contact it at:
+
+<br>Grievance Officer: Konark Kumar
+<br>Address: 12b 2nd Floor, Ram Durga building, Jawahar nagar, Malka Ganj Chowk, Delhi – 110007, Delhi, India.
+
+
+
+<br>Reach out to us on Info@power2create.in, in case of any queries.</p>
 
 				<ul class="contact-details">
 					<li><i class="im im-icon-Phone-2"></i> <strong>Phone:</strong> <span>8178340031 </span></li>
-					<li><i class="im im-icon-Globe"></i> <strong>Web:</strong> <span><a href="#">www.hudaharyana.com</a></span></li>
-					<li><i class="im im-icon-Envelope"></i> <strong>E-Mail:</strong> <span><a href="#">181210045@nitcelhi.ac.in</a></span></li>
+					<li><i class="im im-icon-Globe"></i> <strong>Web:</strong> <span><a href="#">www.powe2create.com</a></span></li>
+					<li><i class="im im-icon-Envelope"></i> <strong>E-Mail:</strong> <span><a href="#">Info@power2create.in</a></span></li>
 				</ul>
 			</div>
 
@@ -31,7 +38,7 @@
 		<div class="col-md-8">
 
 			<section id="contact">
-				<h4 class="headline margin-bottom-35">Testimonial Form</h4>
+				<h4 class="headline margin-bottom-35"> Report a Bug </h4>
 
 				<div id="contact-message"></div>
 
