rectified contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,7 +46,7 @@ Power2create Grievance Officer shall undertake all reasonable efforts to address
 
 				<div id="contact-message"></div>
 
-					<form method="post" name="contactform" id="contactform" autocomplete="on">
+					<form method="post" class="form-a contactForm" autocomplete="on">
                     {% csrf_token %}
 
 					<div class="row">
@@ -57,7 +57,7 @@ Power2create Grievance Officer shall undertake all reasonable efforts to address
                         </div>
                         {% endfor %}
 					<button class="button margin-top-20 margin-bottom-20" type = "submit">Send</button>
-
+                    </div>
 					</form>
 			</section>
 		</div>
