--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -19,8 +19,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
+
 					<h2>Listings</h2>
-					<span>Grid Layout With Sidebar</span>
+					<span>We find the best libraries near you</span>
 				</div>
 			</div>
 		</div>
@@ -95,9 +96,11 @@
 						{% endcomment %}
 
 						<div class="listing-img-content">
+
 							<span class="listing-price">₹ {{ library.min_price_range }} - {{ library.msx_price_range }}<i>₹ {{ min_monthly_charges }}</i></span>
-							<span class="like-icon with-tip" data-tip-content="Add to Bookmarks"></span>
-							<span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
+
+                            
+
 						</div>
 
 						<div class="listing-carousel">
